# livekit-voice-interview

./: .gitignore  README.md  prompt.txt  pyproject.toml  requirements.txt
.venv_linux/: pyvenv.cfg
tests/: test_state_machine.py
